--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap-icons": "^1.8.3",
     "ejs": "^3.1.3",
     "express": "^4.18.1",
